--- a/inst/vignettes/nmecr_overview.Rmd
+++ b/inst/vignettes/nmecr_overview.Rmd
@@ -4,11 +4,11 @@ author:
 - Mrinalini Sharma^[msharma@kw-engineering.com]
 - David Jump^[djump@kw-engineering.com]
 - Devan Johnson^[johnson@kw-engineering.com]
-date: "November 22, 2019"
+date: "August 07, 2020"
 output:
+  pdf_document: default
   html_document:
     df_print: paged
-  pdf_document: default
   word_document: default
 vignette: |
   %\VignetteIndexEntry{Introduction to nmecr} %\VignetteEngine{knitr::rmarkdown} %\VignetteEncoding{UTF-8}
@@ -74,7 +74,7 @@ head(temp, n=5)
 
 ## Baseline and Performance Period Dataframes for Modeling
 
-`create_dataframe()` combines the `eload` and `temp` dataframes into one, filters by the specified start and end dates, and aggregates to an hourly, daily, or a monthly data interval. If operating mode data is supplied, this information is added to the dataframe created by `create_dataframe()`.
+`create_dataframe()` combines the `eload` and `temp` dataframes into one, filters by the specified start and end dates, and aggregates to an hourly, daily, or a monthly data interval. The `timestamps` parameter is optional, with permissible values: 'start' and 'end', indicating whether the timestamps mark the start or the end of the period. If operating mode data is supplied, this information is added to the dataframe created by `create_dataframe()`.
 
 ```{r baseline_df, results='markup'}
 
@@ -83,7 +83,7 @@ head(temp, n=5)
 baseline_df <- create_dataframe(eload_data = eload, temp_data = temp, 
                                 start_date = "03/01/2012 00:00", 
                                 end_date = "02/28/2013 23:59", 
-                                convert_to_data_interval = "Daily")
+                                convert_to_data_interval = "Daily", timestamps = "start")
 
 head(baseline_df, 5)
 
@@ -96,7 +96,7 @@ head(baseline_df, 5)
 performance_df <- create_dataframe(eload_data = eload, temp_data = temp, 
                                    start_date = "03/01/2014 00:00", 
                                    end_date = "02/28/2015 23:59", 
-                                   convert_to_data_interval = "Daily")
+                                   convert_to_data_interval = "Daily", timestamps = "start")
 
 head(performance_df, 5)
 
@@ -127,19 +127,19 @@ The four modeling algorithms have many specifications in common that can be spec
 
 ```{r model inputs, results='markup'}
 
-model_input_options <- assign_model_inputs(timescale_days = NULL, interval_minutes = 15, 
+model_input_options <- assign_model_inputs(timescale_days = NULL, 
                                            has_temp_knots_defined = FALSE, 
                                            equal_temp_segment_points = TRUE,
                                            temp_segments_numeric = 6, 
                                            temp_knots_value = c(40, 45, 50, 60, 65, 90), 
                                            initial_breakpoints = c(50,65), 
-                                           regression_type = "TOWT")
+                                           regression_type = "TOWT",
+                                           occupancy_threshold = 0.65)
 
 ```
 
 Before creating data models, it is a good practice to visualize the energy use profiles:
 
-#### Baseline Energy Use
 
 ```{r baseline profile, results='markup', echo=FALSE, fig.height = 3, fig.width = 7}
 
@@ -187,7 +187,7 @@ SLR_df <- SLR_model$training_data %>%
 ggplot2::ggplot(SLR_df, aes(x = time, y = value)) +
   geom_line(aes(color = variable), size = 1) +
   xlab("Time") +
-  scale_y_continuous(name = "Energy Consumption and Model Fit", labels = scales::comma) +
+  scale_y_continuous(name = "Energy Data & Model Fit (kWh)", labels = scales::comma) +
   theme_minimal() +
   theme(legend.position = "bottom") +
   theme(legend.title = element_blank())
@@ -201,7 +201,7 @@ Figure 3: Baseline Energy Use modeled with Simple Linear Regression over Time
  ggplot2::ggplot(SLR_df, aes(x = temp, y = value)) +
   geom_point(aes(color = variable), size = 1) +
   xlab("Temperature") +
-  scale_y_continuous(name = "Energy Consumption and Model Fit", labels = scales::comma) +
+  scale_y_continuous(name = "Energy Data & Model Fit (kWh)", labels = scales::comma) +
   theme_minimal() +
   theme(legend.position = "bottom") +
   theme(legend.title = element_blank())
@@ -231,7 +231,7 @@ Four_P_df <- Four_P_model$training_data %>%
 ggplot2::ggplot(Four_P_df, aes(x = time, y = value)) +
   geom_line(aes(color = variable), size = 1) +
   xlab("Time") +
-  scale_y_continuous(name = "Energy Consumption and Model Fit", labels = scales::comma) +
+  scale_y_continuous(name = "Energy Data & Model Fit (kWh)", labels = scales::comma) +
   theme_minimal() +
   theme(legend.position = "bottom") +
   theme(legend.title = element_blank())
@@ -243,7 +243,7 @@ Figure 5: Baseline Energy Use modeled with Three Parameter Heating Regression ov
  ggplot2::ggplot(Four_P_df, aes(x = temp, y = value)) +
   geom_point(aes(color = variable), size = 1) +
   xlab("Temperature") +
-  scale_y_continuous(name = "Energy Consumption and Model Fit", labels = scales::comma) +
+  scale_y_continuous(name = "Energy Data & Model Fit (kWh)", labels = scales::comma) +
   theme_minimal() +
   theme(legend.position = "bottom") +
   theme(legend.title = element_blank())
@@ -270,7 +270,7 @@ TOWT_df <- TOWT_model$training_data %>%
 ggplot2::ggplot(TOWT_df, aes(x = time, y = value)) +
   geom_line(aes(color = variable), size = 1) +
   xlab("Time") +
-  scale_y_continuous(name = "Energy Consumption and Model Fit", labels = scales::comma) +
+  scale_y_continuous(name = "Energy Data & Model Fit (kWh)", labels = scales::comma) +
   theme_minimal() +
   theme(legend.position = "bottom") +
   theme(legend.title = element_blank())
@@ -282,7 +282,7 @@ Figure 7: Baseline Energy Use modeled with Time-of-week and Temperature over Tim
  ggplot2::ggplot(TOWT_df, aes(x = temp, y = value)) +
   geom_point(aes(color = variable), size = 1) +
   xlab("Temperature") +
-  scale_y_continuous(name = "Energy Consumption and Model Fit", labels = scales::comma) +
+  scale_y_continuous(name = "Energy Data & Model Fit (kWh)", labels = scales::comma) +
   theme_minimal() +
   theme(legend.position = "bottom") +
   theme(legend.title = element_blank())
@@ -365,7 +365,7 @@ TOWT_df <- TOWT_predictions %>%
 ggplot2::ggplot(TOWT_df, aes(x = time, y = value)) +
   geom_line(aes(color = variable), size = 1) +
   xlab("Time") +
-  scale_y_continuous(name = "Energy Consumption and Predictions", labels = scales::comma) +
+  scale_y_continuous(name = "Energy Data & Predictions (kWh)", labels = scales::comma) +
   theme_minimal() +
   theme(legend.position = "bottom") +
   theme(legend.title = element_blank())
@@ -377,7 +377,7 @@ Figure 9: Performance period energy use and TOWT model predictions over Time
  ggplot2::ggplot(TOWT_df, aes(x = temp, y = value)) +
   geom_point(aes(color = variable), size = 1) +
   xlab("Temperature") +
-  scale_y_continuous(name = "Energy Consumption and Predictions", labels = scales::comma) +
+  scale_y_continuous(name = "Energy Data & Predictions (kWh)", labels = scales::comma) +
   theme_minimal() +
   theme(legend.position = "bottom") +
   theme(legend.title = element_blank())
